# orion-ai-assistant

./: .dockerignore  .gitignore  README.md  dump.rdb  embedtaktik.md  fix_orion.py  install.ps1  install.sh  local_db_setup.py  manager.py  orion.py  search2.txt  sonrayapılacaklar.md  stopport.md  testgit.md  todo.md
backend(old)/: .env.example  .lazy_log_patch.py  ADMIN_PANEL_INTEGRATION.md  DEPLOYMENT_GUIDE_LINUX.md  GCP_VERTEX_ACCOUNT_SWITCH_RUNBOOK.md  README.md  READ_BEFORE_PROD_DOMAIN_SETUP.md  VERTEX_AI_DOCKER.md  aiconfigjson-control.md  docker-compose.dev.yml  docker-compose.lb.yml  docker-compose.prod.yml  docker-compose.server.yml  gelinceyap 2.md  gelinceyap.md  hatırlatma.md  langgraph_bottleneck.md  proje-duzelt.md  promtlar.md  pyproject.toml  run.md  run2.md  test_raw.py  tts-promts.md  vertexai-login.md  özet.md
backend(old)/admin_panel/: Dockerfile  README.md
backend(old)/admin_panel/app/: main.py
backend(old)/admin_panel/app/routes/: __init__.py  config_routes.py  stats_routes.py  user_routes.py
backend(old)/admin_panel/app/services/: api_paths.py  backend_client.py  config_service.py  stats_service.py  user_service.py
backend(old)/admin_panel/app/static/: app.js  styles.css  (+1 more)
backend(old)/agent/: Dockerfile  __init__.py  cli.py  debug.py  facade.py  graph.py  langgraph.json  model.py  stream_parser.py  tools.py  worker.py
backend(old)/agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend(old)/api/: Dockerfile
backend(old)/api/app/: main.py  socketio_server.py
backend(old)/api_old/: Dockerfile
backend(old)/api_old/app/: connection_manager.py  main.py  shared_state.py  socketio_server.py
backend(old)/common/: agent_queue_contract.py  env_helper.py
backend(old)/common/design_patterns/: singleton.py
backend(old)/config/: __init__.py  config_manager.py  models.py  schemas.py
backend(old)/config/manager/: defaults.py  operations.py  sync.py
backend(old)/config/settings/: __init__.py  admin.py  ai.py  api_server.py  core.py
backend(old)/config/shared/: ai_config.json
backend(old)/langgraphtest/: async_worker_example.py  fast_vertexaitest.py  push_to_redis.py  saf_test.py  saf_testv2.py  saf_testv3.py
backend(old)/log/: __init__.py  core.py  formatter.py  logger.py  registry.py  settings.py  settings_models.py
backend(old)/nginx/: nginx.conf
backend(old)/scripts/: agent_queue_worker.py  agent_stream_test.py  load_test.py  readme.md  socketio_debug.py  start-prod.ps1  start.ps1  stop-prod.ps1  stop.ps1
backend(old)/tests/: test_vertex_ttft.py
backend(old)/tests/agent_stream_tests/: test_stream.py  test_stream_graph.py
backend(old)/tests/langgraphtest/: test_async_worker_example.py
backend(old)/tts-test/: googleaistudio-tts-nostream.py  kontrol.md  vertex-text-stream-async-langchain.py  vertex-text-stream-async.py  vertex-text-stream-oneshot.py  vertex-text-stream.py  vertex-tts-stream-direktws.py  vertex-tts-stream.py
installer/: .gitignore  pyproject.toml
installer/app/: __main__.py  config.py  routes.py  services.py
installer/app/core/: detect_hardware.py  i18n.py  models.py
installer/app/localize/: en.json  tr.json
installer/app/ui/: app.js  index.html  style.css
installer/app/utils/: docker_utils.py  model_resolver.py  system_utils.py
services/hub/: .dockerignore  api.Dockerfile  api.Dockerfile.dockerignore  docker-compose.lb.yml  docker-compose.yml  manifest.json  nginx.conf  pyproject.toml  run_local.py  worker.Dockerfile  worker.Dockerfile.dockerignore
services/hub/docs/: architecture_guardrails.md  artillery_load_test.md  data-storage.md  runtime-settings.md  worker_context_guide.md  wsl2_clock_drift.md
services/hub/scripts/: load_test.py  orion.ps1
services/tts/omnivoice/: pyproject.toml
(+167 files in other folders)
