[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-ai-assistant"
version = "0.1.0"
description = "AI tabanlı kişisel asistan projesi"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Kürşat Alaçam"}]
dependencies = [
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "uvloop>=0.17.0",
    "pydantic>=2.0.0",
    "starlette>=0.46.0,<1.0.0",
    "websockets>=11.0.0",
    "python-socketio>=5.9.0",
    "redis>=5.0.0",
    "httpx>=0.28.1",
    "h2>=4.1.0",
    "python-multipart>=0.0.22",
    "filetype>=1.2.0",
]
agent = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "uvloop>=0.17.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "langgraph>=1.1.2",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "tavily-python>=0.7.23",
    "pytz>=2026.1",
    "google-genai>=1.67.0",
]
admin_panel = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.20"]
dev = ["ruff>=0.1", "black>=24.0.0"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = [
    "api",
    "api.*",
    "agent",
    "agent.*",
    "log",
    "log.*",
    "redis",
    "common",
    "common.*",
    "config",
    "config.*",
    "arangodb",
    "admin_panel",
    "admin_panel.*",
]

