[project]
name = "orion-installer-panel"
version = "0.1.1"
description = "Orion AI Assistant Management Panel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "psutil>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = []
