[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "orion-hub"
version = "0.1.0"
description = "Stateless API + fake worker scaffold for Orion"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "redis>=5.0.0",
  "pydantic-settings>=2.2.1",
  "aiohttp>=3.10.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.0.0",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orion"]
